--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "npm": "^9.6.7",
     "qr-code-styling": "^1.6.0-rc.1",
     "v-click-outside": "^3.2.0",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -19,6 +20,6 @@
     "@vue/cli-service": "~5.0.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
   }
 }
